--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ ext {
     // Work on MML or MHQ sometimes requires changes in MM as well. The maven publishing tasks use
     // these properties to append the branch name to the artifact id if the repo is not in the master
     // branch, making it available separately to the child project. 
-    hqBranch = grgit.branch.current.name
+    hqBranch = grgit.branch.current().name
     hqBranchTag = hqBranch.equals('master')? '' : '-' + hqBranch
     
     // Allows setting a dependency on a different MM branch.
