--- a/MekHQ/build.gradle
+++ b/MekHQ/build.gradle
@@ -546,7 +546,7 @@ task assembleDist(overwrite: true) {
     dependsOn stageMML
     dependsOn unixDistTar
     dependsOn windowsDistZip
-    dependsOn macDistTar
+//    dependsOn macDistTar
 }
 
 task buildFromRepo (type: GradleBuild) {
