Adding personnel wave 2 campaign option descriptions to the resources file

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -116,20 +116,20 @@ randomizeOrigin.text=Randomize Origin
 originSearchRadius.text=Random Origin Search Radius
 #family
 FamilyTab.text=Family Options
-useRandomMarriages.text=
-useRandomMarriages.toolTipText=
-chanceRandomMarriages.text=
-chanceRandomMarriages.toolTipText=
-minimumMarriageAge.text=
-minimumMarriageAge.toolTipText=
-marriageAgeRange.text=
-marriageAgeRange.toolTipText=
-useRandomSameSexMarriages.text=
-useRandomSameSexMarriages.toolTipText=
-chanceRandomSameSexMarriages.text=
-chanceRandomSameSexMarriages.toolTipText=
+minimumMarriageAge.text=Minimum age for marriages:
+minimumMarriageAge.toolTipText=This is the minimum age that is allowed for a person to be married.
 checkMutualAncestorsDepth.text=Minimum distance of relation for marriage to be possible:
 checkMutualAncestorsDepth.toolTipText=This is the distance of relation that is used to determine if two people can marry
+useRandomMarriages.text=Use random marriages (Unofficial)
+useRandomMarriages.toolTipText=This is an unofficial addition that enables random marriages between fitting members of your force.
+chanceRandomMarriages.text=Percent chance of a fitting person finding a spouse per day:
+chanceRandomMarriages.toolTipText=This is the percent chance that a fitting member of your force will marry another fitting member of your force of the opposite sex.
+marriageAgeRange.text=Age Range for Random Marriages:
+marriageAgeRange.toolTipText=This plus/minus the age forms the possible range of ages for spouses in the forming of a random marriage.
+useRandomSameSexMarriages.text=Use random same sex marriages (Unofficial)
+useRandomSameSexMarriages.toolTipText=This is an unofficial addition that enables random marriages between fitting same sex members of your force.
+chanceRandomSameSexMarriages.text=Percent chance of a fitting person finding a same sex spouse per day:
+chanceRandomSameSexMarriages.toolTipText=This is the percent chance that a fitting member of your force will marry another fitting member of your force of the same sex
 useUnofficialProcreation.text=Use procreation (Unofficial)
 useUnofficialProcreation.toolTipText=This is an unofficial addition that enables procreation between members of your force in a relationship
 chanceProcreation.text=Percent chance of a fitting female procreating per day:
@@ -138,7 +138,7 @@ useUnofficialProcreationNoRelationship.text=Use procreation without a relationsh
 useUnofficialProcreationNoRelationship.toolTipText=This is an unofficial addition that enables procreation for female members of your force not in a relationship
 chanceProcreationNoRelationship.text=Percent chance of a fitting female procreating per day (no relationship):
 chanceProcreationNoRelationship.toolTipText=This is the percent chance per day that a female member of your force not in a relationship will have a baby when not deployed.
-displayTrueDueDate.text=Display true due date:
+displayTrueDueDate.text=Display true due date
 displayTrueDueDate.toolTipText=This displays the actual date the baby will be delivered on the mother's personnel sheet instead of an estimated due date.
 logConception.text=Log Conception and Birth in Personnel and Medical Logs:
 babySurnameStyle.text=Which parent's surname should the baby take:
@@ -151,13 +151,13 @@ displayFamilyLevel.toolTipText=This setting is the relation to the selected pers
 displayFamilyLevel.ParentsChildren=Parents, Siblings, and Children
 displayFamilyLevel.GrandparentsGrandchildren=Grandparents and Grandchildren
 displayFamilyLevel.AuntsUnclesCousins=Aunts, Uncles, and Cousins
-useRandomDeaths.text=
-useRandomDeaths.toolTipText=
-keepMarriedNameUponSpouseDeath.text=Keep married name upon spouse death:
+useRandomDeaths.text=Use random deaths from old age (Unofficial)
+useRandomDeaths.toolTipText=This is an unofficial addition that enables random deaths from old age
+keepMarriedNameUponSpouseDeath.text=Keep married name upon spouse death
 #salary
 SalaryTab.text=Salary
 #end Personnel Tab
-useQuirksBox.text=Use Quirks
+useQuirksBox.text=Use Quirk
 useQuirksBox.toolTipText=Allow units to have StratOps quirks
 payForPartsBox.text=Pay For Parts
 payForPartsBox.toolTipText=Pay the c-bill cost of any replacement parts
