--- a/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
@@ -87,6 +87,9 @@ marriageHyphenateSpouse.text=Spouse hyphenates surname with yours
 marriageBothHyphenateSpouse.text=Both hyphenate your spouse's surname with yours
 marriageHyphenateYourself.text=Hyphenate your surname with spouse's
 marriageBothHyphenateYourself.text=Both hyphenate your surname with your spouse's
+marriageMale.text=Both share the male spouse's surname (selected person for same sex)
+marriageFemale.text=Both share the female spouse's surname (selected person for same sex)
+marriageRandomWeighted.text=Surname style randomly determined through set weights
 marriagePartnerDesc.format=%s, %d, %s
 marriagePrisonerDesc.format=Prisoner %s, %d, %s
 marriageRenameSpouse.text=Spouse takes your surname
