Removing unnecessary quotation mark from miFireAllMedics.text

--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -54,7 +54,7 @@ popupHireMedicsNum.text=Hire How Many Medics?
 miFireMedics.text=Release Medics
 popupFireMedicsNum.text=Release How Many Medics?
 miFullStrengthMedics.text=Bring All Medical Teams to Full Strength
-miFireAllMedics.text=Release All Medics from Pool"
+miFireAllMedics.text=Release All Medics from Pool
 
 # Reports Menu
 menuReports.text=Reports
