Moving WeightedMap to MegaMek Util and implemeting WeightedSurname choices for marriages

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -126,6 +126,8 @@ chanceRandomMarriages.text=Percent chance of a fitting person finding a spouse p
 chanceRandomMarriages.toolTipText=This is the percent chance that a fitting member of your force will marry another fitting member of your force of the opposite sex.
 marriageAgeRange.text=Age Range for Random Marriages:
 marriageAgeRange.toolTipText=This plus/minus the age forms the possible range of ages for spouses in the forming of a random marriage.
+randomMarriageSurnameWeights.text=Random Marriage Surname Weights
+randomMarriageSurnameWeights.toolTipText=These are the weights used in determining the surname change, if any, when a random marriage occurs.
 useRandomSameSexMarriages.text=Use random same sex marriages (Unofficial)
 useRandomSameSexMarriages.toolTipText=This is an unofficial addition that enables random marriages between fitting same sex members of your force.
 chanceRandomSameSexMarriages.text=Percent chance of a fitting person finding a same sex spouse per day:
