--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -127,7 +127,7 @@ chanceRandomMarriages.toolTipText=This is the percent chance that a fitting memb
 marriageAgeRange.text=Age Range for Random Marriages:
 marriageAgeRange.toolTipText=This plus/minus the age forms the possible range of ages for spouses in the forming of a random marriage.
 randomMarriageSurnameWeights.text=Random Marriage Surname Weights
-randomMarriageSurnameWeights.toolTipText=These are the weights used in determining the surname change, if any, when a random marriage occurs.
+randomMarriageSurnameWeights.toolTipText=These are the weights used in determining the surname change, if any, when a random marriage occurs. \nThey will be the percent chance if the values for the weights all add up to 100.
 useRandomSameSexMarriages.text=Use random same sex marriages (Unofficial)
 useRandomSameSexMarriages.toolTipText=This is an unofficial addition that enables random marriages between fitting same sex members of your force.
 chanceRandomSameSexMarriages.text=Percent chance of a fitting person finding a same sex spouse per day:
@@ -153,7 +153,7 @@ displayFamilyLevel.toolTipText=This setting is the relation to the selected pers
 displayFamilyLevel.ParentsChildren=Parents, Siblings, and Children
 displayFamilyLevel.GrandparentsGrandchildren=Grandparents and Grandchildren
 displayFamilyLevel.AuntsUnclesCousins=Aunts, Uncles, and Cousins
-useRandomDeaths.text=Use random deaths from old age (Unofficial)
+useRandomDeaths.text=Use random deaths from old age (Unofficial and Unimplemented)
 useRandomDeaths.toolTipText=This is an unofficial addition that enables random deaths from old age
 keepMarriedNameUponSpouseDeath.text=Keep married name upon spouse death
 #salary
