--- a/MekHQ/resources/mekhq/resources/PartsStoreDialog.properties
+++ b/MekHQ/resources/mekhq/resources/PartsStoreDialog.properties
@@ -2,6 +2,7 @@ Form.title=Purchase Parts
 btnBuyBulk.text=Buy in Bulk
 btnBuy.text=Buy
 btnAdd.text=Add (GM)
+btnAddBulk.text=Add in Bulk (GM)
 btnClose.text=Close
 lblPartsChoice.text=Type:
 lblFilter.text=Filter:
