Adding new flags to the personnel table mouse adapter

--- a/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
@@ -45,6 +45,11 @@ costNotPossible.text=(Not Possible)
 costValue.format=(%dXP)
 crew.text=Crew
 dependent.text=Dependent
+tryingToMarry.text=Trying to Marry
+tryingToMarry.toolTipText=If this is not selected then a person will not be included as a potential spouse for marriages \n(standard checks still apply, so married personnel will not be included even if this flag is selected)
+tryingToConceive.text=Trying to Conceive
+tryingToConceive.toolTipText=If this is not selected the person will not have children created through random procreation.
+founder.text=Founder
 edge.text=Edge
 edgeTriggerExplosion.text=Ammo Explosion
 edgeTriggerHeadHits.text=Head Hits
