Rewording tooltips for tryingToConceive and tryingToMarry

--- a/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
@@ -46,9 +46,9 @@ costValue.format=(%dXP)
 crew.text=Crew
 dependent.text=Dependent
 tryingToMarry.text=Trying to Marry
-tryingToMarry.toolTipText=If this is not selected then a person will not be included as a potential spouse for marriages \n(standard checks still apply, so married personnel will not be included even if this flag is selected)
+tryingToMarry.toolTipText=If this is selected then a person will be included as a potential spouse for marriages \n(standard checks still apply, so married personnel will not be included even if this flag is selected)
 tryingToConceive.text=Trying to Conceive
-tryingToConceive.toolTipText=If this is not selected the person will not have children created through random procreation.
+tryingToConceive.toolTipText=If this is selected the person has a chance to have children created through random procreation.
 founder.text=Founder
 edge.text=Edge
 edgeTriggerExplosion.text=Ammo Explosion
