Fixing spelling mistake in resources file

--- a/MekHQ/resources/mekhq/resources/ContractPaymentBreakdown.properties
+++ b/MekHQ/resources/mekhq/resources/ContractPaymentBreakdown.properties
@@ -8,7 +8,7 @@ lblOfNetIncome.text=of Contract Pay
 lblOfGrossIncome.text=of Gross Contract Pay
 lblAdvanceCashflow.text=Advance Money
 lblSignBonusAmount1.text=Signing Bonus:
-lblMonthlyCashflow.text=Total Monthly Money (est.)
+lblMonthlyCashFlow.text=Total Monthly Money (est.)
 lblFeeAmount1.text=MRBC Fee:
 lblEstimatedOverheadExpenses.text=Total Overhead (est.):
 lblEstimatedMaintenanceExpenses.text=Total Maintenance (est.):
