Add the initial Online Session tab

--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -274,3 +274,6 @@ tabOverview.toolTipText=A general overview of the unit, includes multiple breakd
 
 bottomRating.DragoonsRating=<html><b>Dragoons Rating:</b> %s </html>
 bottomRating.CampaignOpsRating=<html><b>Campaign Ops Rating:</b> %s </html>
+
+# Online Tab
+panOnline.TabConstraints.tabTitle=Online Session
