--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -148,6 +148,8 @@ babySurnameStyle.text=Which parent's surname should the baby take:
 babySurnameStyle.toolTipText=This is the parent whose surname a baby will take. If Father is selected and there is no father, the baby will take the mother's surname.
 babySurnameStyle.Mother=Mother
 babySurnameStyle.Father=Father
+babySurnameStyle.Mother-Father=Mother-Father
+babySurnameStyle.Father-Mother=Father-Mother
 useParentage.text=Display children in the person panel
 displayFamilyLevel.text=The level of relation to be displayed:
 displayFamilyLevel.toolTipText=This setting is the relation to the selected person that MekHQ will display up to, including the previous levels \n(higher levels require more processing when loading a person)
