Adding the ability to hide Impossible TR parts

--- a/MekHQ/resources/mekhq/resources/PartsStoreDialog.properties
+++ b/MekHQ/resources/mekhq/resources/PartsStoreDialog.properties
@@ -6,5 +6,6 @@ btnAddBulk.text=Add in Bulk (GM)
 btnClose.text=Close
 lblPartsChoice.text=Type:
 lblFilter.text=Filter:
+hideImpossible.text=Hide Impossible Target Parts
 bonusPartLog.text=Bonus part used to acquire 1x
 useBonusPart.text=Use Bonus Part
