--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -3,26 +3,27 @@
 # Menu Resources
 # File Menu
 fileMenu.text = File
-menuLoad.text=Load Campaign...
-menuSave.text=Save Campaign...
+menuLoad.text=Load Campaign
+menuSave.text=Save Campaign
+menuNew.text=New Campaign
 # Menu Import
 menuImport.text=Import
-miImportOptions.text=Import Campaign Options from an xml file...
-miImportPerson.text=Import Personnel from a prsx file...
-miImportParts.text=Import Parts from a parts file...
-miLoadForces.text=Load Forces from a MUL File...
+miImportOptions.text=Campaign Options from an xml file
+miImportPerson.text=Personnel from a prsx file
+miImportParts.text=Parts from a parts file
+miLoadForces.text=Forces from a MUL File
 # Menu Export
 menuExport.text=Export
 menuExportCSV.text = CSV File
+miExportPersonnel.text=Personnel
+miExportUnit.text=Units
+miExportFinances.text=Finances
 menuExportXML.text = XML File
-miExportOptions.text=Export Campaign Options...
-miExportPersonnel.text=Export Personnel...
-miExportUnit.text=Export Units...
-miExportPlanets.text=Export Planets...
-miExportFinances.text=Export Finances...
-miExportCampaignSubset.text=Export Campaign Subset...
+miExportOptions.text=Campaign Options
+miExportPlanets.text=Planets
+miExportCampaignSubset.text=Campaign Subset
 # Menu File Others
-miMercRoster.text=Upload to MercRoster Database...
+miMercRoster.text=Upload to MercRoster Database
 menuOptions.text=Campaign Options
 menuOptionsMM.text=MegaMek Options
 menuMekHqOptions.text=MekHQ Options
@@ -32,12 +33,12 @@ menuExit.text=Exit
 # Marketplace Menu
 menuMarket.text=Marketplace
 miPersonnelMarket.text=Personnel Market
-miContractMarket.text=Contract Market...
-miUnitMarket.text=Unit Market...
-miShipSearch.text=Ship Search...
+miContractMarket.text=Contract Market
+miUnitMarket.text=Unit Market
+miShipSearch.text=Ship Search
 miPurchaseUnit.text=Purchase Unit
 miBuyParts.text=Purchase Parts
-miHireBulk.text=Hire Personnel in Bulk
+miHireBulk.text=Bulk Hire Personnel
 menuHire.text=Hire
 # Menu Astech Pool
 menuAstechPool.text=Astech Pool
@@ -58,31 +59,31 @@ miFireAllMedics.text=Release All Medics from Pool
 
 # Reports Menu
 menuReports.text=Reports
-miDragoonsRating.text=Unit Rating...
-miPersonnelReport.text=Personnel Report...
-miHangarBreakdown.text=Hangar Breakdown...
-miTransportReport.text=Transport Capacity Report...
-miCargoReport.text=Cargo Report...
+miDragoonsRating.text=Unit Rating
+miPersonnelReport.text=Personnel Report
+miHangarBreakdown.text=Hangar Breakdown
+miTransportReport.text=Transport Capacity Report
+miCargoReport.text=Cargo Report
 
 # View Menu
 menuView.text=View
-miShowHistoricalReportLog.text=Show Historical Daily Report Log
+miShowHistoricalReportLog.text=Historical Daily Report Log
 miDetachLog.text=Detach Daily Report Log
 miAttachLog.text=Attach Daily Report Log
-miBloodnameDialog.text=Show Bloodname Dialog...
-miRetirementDefectionDialog.text=Show Retirement/Defection Dialog...
-miShowOverview.text=Show Overview Tab
+miBloodnameDialog.text=Bloodname Dialog
+miRetirementDefectionDialog.text=Retirement/Defection Dialog
+miShowOverview.text=Overview Tab
 
 # Manage Campaign Menu
 menuManageCampaign.text=Manage Campaign
-miGMToolsDialog.text=Show GM Tools Dialog
+miGMToolsDialog.text=GM Tools Dialog
 miAdvanceMultipleDays.text=Advance Multiple Days
-miRandomBloodnames.text=Randomize Bloodnames All Personnel
-miBatchXP.text=Mass training
+miRandomBloodnames.text=Bloodname Randomization for All Personnel
+miBatchXP.text=Mass Personnel Training
 miScenarioEditor.text=Scenario Template Editor
 
 # Help Menu
-menuHelp.text = Help
+menuHelp.text=Help
 menuAbout.text=About
 #End Menu Resources
 
