--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -3,27 +3,27 @@
 # Menu Resources
 # File Menu
 fileMenu.text = File
-menuLoad.text=Load Campaign
-menuSave.text=Save Campaign
-menuNew.text=New Campaign
+menuLoad.text=Load Campaign...
+menuSave.text=Save Campaign...
+menuNew.text=New Campaign...
 # Menu Import
 menuImport.text=Import
-miImportOptions.text=Campaign Options from an xml file
-miImportPerson.text=Personnel from a prsx file
-miImportParts.text=Parts from a parts file
-miLoadForces.text=Forces from a MUL File
+miImportOptions.text=Campaign Options from an xml file...
+miImportPerson.text=Personnel from a prsx file...
+miImportParts.text=Parts from a parts file...
+miLoadForces.text=Forces from a MUL File...
 # Menu Export
 menuExport.text=Export
 menuExportCSV.text = CSV File
-miExportPersonnel.text=Personnel
-miExportUnit.text=Units
-miExportFinances.text=Finances
+miExportPersonnel.text=Personnel...
+miExportUnit.text=Units...
+miExportFinances.text=Finances...
 menuExportXML.text = XML File
-miExportOptions.text=Campaign Options
-miExportPlanets.text=Planets
-miExportCampaignSubset.text=Campaign Subset
+miExportOptions.text=Campaign Options...
+miExportPlanets.text=Planets...
+miExportCampaignSubset.text=Campaign Subset...
 # Menu File Others
-miMercRoster.text=Upload to MercRoster Database
+miMercRoster.text=Upload to MercRoster Database...
 menuOptions.text=Campaign Options
 menuOptionsMM.text=MegaMek Options
 menuMekHqOptions.text=MekHQ Options
@@ -33,9 +33,9 @@ menuExit.text=Exit
 # Marketplace Menu
 menuMarket.text=Marketplace
 miPersonnelMarket.text=Personnel Market
-miContractMarket.text=Contract Market
-miUnitMarket.text=Unit Market
-miShipSearch.text=Ship Search
+miContractMarket.text=Contract Market...
+miUnitMarket.text=Unit Market...
+miShipSearch.text=Ship Search...
 miPurchaseUnit.text=Purchase Unit
 miBuyParts.text=Purchase Parts
 miHireBulk.text=Bulk Hire Personnel
@@ -59,19 +59,19 @@ miFireAllMedics.text=Release All Medics from Pool
 
 # Reports Menu
 menuReports.text=Reports
-miDragoonsRating.text=Unit Rating
-miPersonnelReport.text=Personnel Report
-miHangarBreakdown.text=Hangar Breakdown
-miTransportReport.text=Transport Capacity Report
-miCargoReport.text=Cargo Report
+miDragoonsRating.text=Unit Rating...
+miPersonnelReport.text=Personnel Report...
+miHangarBreakdown.text=Hangar Breakdown...
+miTransportReport.text=Transport Capacity Report...
+miCargoReport.text=Cargo Report...
 
 # View Menu
 menuView.text=View
 miShowHistoricalReportLog.text=Historical Daily Report Log
 miDetachLog.text=Detach Daily Report Log
 miAttachLog.text=Attach Daily Report Log
-miBloodnameDialog.text=Bloodname Dialog
-miRetirementDefectionDialog.text=Retirement/Defection Dialog
+miBloodnameDialog.text=Bloodname Dialog...
+miRetirementDefectionDialog.text=Retirement/Defection Dialog...
 miShowOverview.text=Overview Tab
 
 # Manage Campaign Menu
