Adding localized strings for descriptors to the GenderDescriptors enum, to move them out of person

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -18,6 +18,23 @@ BodyLocation.LEFT_FOOT.text=Left Foot
 BodyLocation.INTERNAL.text=Innards
 BodyLocation.GENERIC.text=""
 
+# GenderDescriptors Enum
+GenderDescriptors.MALE.text=male
+GenderDescriptors.FEMALE.text=female
+GenderDescriptors.OTHER.text=other
+GenderDescriptors.HE.text=he
+GenderDescriptors.SHE.text=she
+GenderDescriptors.THEY.text=they
+GenderDescriptors.HIM.text=him
+GenderDescriptors.HER.text=her
+GenderDescriptors.THEM.text=them
+GenderDescriptors.HIS.text=his
+GenderDescriptors.HERS.text=hers
+GenderDescriptors.THEIR.text=their
+GenderDescriptors.THEIRS.text=theirs
+GenderDescriptors.BOY.text=boy
+GenderDescriptors.GIRL.text=girl
+
 ## Generators
 
 ## Personnel Classes
