Moving Personnel Status to a PersonnelStatus enum

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -35,6 +35,12 @@ GenderDescriptors.THEIRS.text=theirs
 GenderDescriptors.BOY.text=boy
 GenderDescriptors.GIRL.text=girl
 
+# PersonnelStatus Enum
+PersonnelStatus.ACTIVE.text=Active
+PersonnelStatus.RETIRED.text=Retired
+PersonnelStatus.KIA.text=Killed in Action
+PersonnelStatus.MIA.text=Missing in Action
+
 ## Generators
 
 ## Personnel Classes
