Fixing resource bundle location

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -16,7 +16,7 @@ BodyLocation.LEFT_HAND.text=Left Hand
 BodyLocation.RIGHT_FOOT.text=Right Foot
 BodyLocation.LEFT_FOOT.text=Left Foot
 BodyLocation.INTERNAL.text=Innards
-BodyLocation.GENERIC.text=""
+BodyLocation.GENERIC.text=
 
 # GenderDescriptors Enum
 GenderDescriptors.MALE.text=male
