Applying formatting changes from personal view

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -10,7 +10,7 @@ BodyLocation.ABDOMEN.text=Abdomen
 BodyLocation.RIGHT_ARM.text=Right Arm
 BodyLocation.LEFT_ARM.text=Left Arm
 BodyLocation.RIGHT_LEG.text=Right Leg
-BodyLocation.Left_LEG.text=Left leg
+BodyLocation.Left_LEG.text=Left Leg
 BodyLocation.RIGHT_HAND.text=Right Hand
 BodyLocation.LEFT_HAND.text=Left Hand
 BodyLocation.RIGHT_FOOT.text=Right Foot
