Adding Time in Rank to MekHQ

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -111,6 +111,7 @@ useTougherHealing.text=Tougher Healing
 useTougherHealing.toolTipText=The healing check will be penalized for every additional hit above 2.
 useTransfers.text=Log Saver - Use Reassign instead of Remove/Assign
 useTimeInService.text=Track Time In Service
+useTimeInRank.text=Track Time In Rank
 showOriginFaction.text=Show Origin Faction
 randomizeOrigin.text=Randomize Origin
 randomizeDependentsOrigin.text=Randomize Origin for Dependents
