Adding and implementing the PrisonerStatus enum

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -41,6 +41,11 @@ PersonnelStatus.RETIRED.text=Retired
 PersonnelStatus.KIA.text=Killed in Action
 PersonnelStatus.MIA.text=Missing in Action
 
+# PrisonerStatus Enum
+PrisonerStatus.FREE.text=Free
+PrisonerStatus.PRISONER.text=Prisoner
+PrisonerStatus.BONDSMAN.text=Bondsman
+
 ## Generators
 
 ## Personnel Classes
