--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -112,6 +112,8 @@ useTougherHealing.toolTipText=The healing check will be penalized for every addi
 useTransfers.text=Log Saver - Use Reassign instead of Remove/Assign
 useTimeInService.text=Track Time In Service
 useTimeInRank.text=Track Time In Rank
+trackTotalEarnings.text=Track Total Earnings
+trackTotalEarnings.toolTipText=This tracks the total amount earned by personnel. The tracking is only done when this option is enabled, and it is not backfilled.
 showOriginFaction.text=Show Origin Faction
 randomizeOrigin.text=Randomize Origin
 randomizeDependentsOrigin.text=Randomize Origin for Dependents
