--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -10,9 +10,10 @@ lblAge1.text=<html><nobr><b>Age:</b></nobr></html>;
 lblGender1.text=<html><nobr><b>Gender:</b></nobr></html>;
 lblStatus1.text=<html><nobr><b>Status:</b></nobr></html>;
 lblOrigin1.text=<html><nobr><b>Origin:</b></nobr></html>;
-lblRecruited1.text=<html><nobr><b>Recruited:</b></nobr></html>;
-lblTimeServed1.text=<html><nobr><b>Time in Service:</b></nobr></html>;
 lblDueDate1.text=<html><nobr><b>Due Date:</b></nobr></html>;
+lblTotalEarnings1.text=<html><nobr><b>Total Earnings:</b></nobr></html>;
+lblTimeServed1.text=<html><nobr><b>Time in Service:</b></nobr></html>;
+lblRecruited1.text=<html><nobr><b>Recruited:</b></nobr></html>;
 lblLastRankChangeDate1.text=<html><nobr><b>Last Promotion/Demotion:</b></nobr></html>;
 lblTimeInRank1.text=<html><nobr><b>Time in Rank:</b></nobr></html>;
 lblGun1.text=<html><nobr><b>Gunnery:</b></nobr></html>;
