Test to get event data

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,28 @@ jobs:
         repository: MegaMek/megamek
         path: megamek
 
+    # branch name: github.event.pull_request.head.ref
+    # repo: github.event.pull_request.head.repo.full_name
+    - name: Echo event data
+      run: |
+        echo "The github context is:"
+        echo "${{ toJson(github) }}"
+        echo ""
+        echo "The job context is:"
+        echo "${{ toJson(job) }}"
+        echo ""
+        echo "The steps context is:"
+        echo "${{ toJson(steps) }}"
+        echo ""
+        echo "The runner context is:"
+        echo "${{ toJson(runner) }}"
+        echo ""
+        echo "The strategy context is:"
+        echo "${{ toJson(strategy) }}"
+        echo ""
+        echo "The matrix context is:"
+        echo "${{ toJson(matrix) }}"
+
     #
     # Checkout the latest MegaMekLab source
     # and put it in: ./megameklab
