Creating a FamilialRelationshipTypes Enum

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -10,13 +10,63 @@ BodyLocation.ABDOMEN.text=Abdomen
 BodyLocation.RIGHT_ARM.text=Right Arm
 BodyLocation.LEFT_ARM.text=Left Arm
 BodyLocation.RIGHT_LEG.text=Right Leg
-BodyLocation.Left_LEG.text=Left Leg
+BodyLocation.LEFT_LEG.text=Left Leg
 BodyLocation.RIGHT_HAND.text=Right Hand
 BodyLocation.LEFT_HAND.text=Left Hand
 BodyLocation.RIGHT_FOOT.text=Right Foot
 BodyLocation.LEFT_FOOT.text=Left Foot
 BodyLocation.INTERNAL.text=Innards
 BodyLocation.GENERIC.text=
+
+# FamilialRelationshipTypes Enum
+FamilialRelationshipTypes.adopted=Adoptive
+FamilialRelationshipTypes.great=Great-
+
+FamilialRelationshipTypes.GRANDPARENT.MALE.text=Grandfather
+FamilialRelationshipTypes.GRANDPARENT.FEMALE.text=Grandmother
+FamilialRelationshipTypes.GRANDPARENT.OTHER.text=Grandparent
+FamilialRelationshipTypes.PARENT.MALE.text=Father
+FamilialRelationshipTypes.PARENT.FEMALE.text=Mother
+FamilialRelationshipTypes.PARENT.OTHER.text=Parent
+FamilialRelationshipTypes.SIBLING.MALE.text=Brother
+FamilialRelationshipTypes.SIBLING.FEMALE.text=Sister
+FamilialRelationshipTypes.SIBLING.OTHER.text=Sibling
+FamilialRelationshipTypes.CHILD.MALE.text=Son
+FamilialRelationshipTypes.CHILD.FEMALE.text=Daughter
+FamilialRelationshipTypes.CHILD.OTHER.text=Child
+FamilialRelationshipTypes.GRANDCHILD.MALE.text=Grandson
+FamilialRelationshipTypes.GRANDCHILD.FEMALE.text=Granddaughter
+FamilialRelationshipTypes.GRANDCHILD.OTHER.text=Grandchild
+
+FamilialRelationshipTypes.AUNT_UNCLE.MALE.text=Uncle
+FamilialRelationshipTypes.AUNT_UNCLE.FEMALE.text=Aunt
+FamilialRelationshipTypes.COUSIN.text=Cousin
+FamilialRelationshipTypes.NIBLING.MALE.text=Nephew
+FamilialRelationshipTypes.NIBLING.FEMALE.text=Niece
+FamilialRelationshipTypes.NIBLING.OTHER.text=Nibling
+
+FamilialRelationshipTypes.SPOUSE.MALE.text=Husband
+FamilialRelationshipTypes.SPOUSE.FEMALE.text=Wife
+FamilialRelationshipTypes.SPOUSE.OTHER.text=Spouse
+FamilialRelationshipTypes.PARENT_IN_LAW.MALE.text=Father-in-law
+FamilialRelationshipTypes.PARENT_IN_LAW.FEMALE.text=Mother-in-law
+FamilialRelationshipTypes.PARENT_IN_LAW.OTHER.text=Parent-in-law
+FamilialRelationshipTypes.SIBLING_IN_LAW.MALE.text=Brother-in-law
+FamilialRelationshipTypes.SIBLING_IN_LAW.FEMALE.text=Sister-in-law
+FamilialRelationshipTypes.SIBLING_IN_LAW.OTHER.text=Sibling-in-law
+FamilialRelationshipTypes.CHILD_IN_LAW.MALE.text=Son-in-law
+FamilialRelationshipTypes.CHILD_IN_LAW.FEMALE.text=Daughter-in-law
+FamilialRelationshipTypes.CHILD_IN_LAW.OTHER.text=Child-in-law
+
+FamilialRelationshipTypes.STEPPARENT.MALE.text=Stepfather
+FamilialRelationshipTypes.STEPPARENT.FEMALE.text=Stepmother
+FamilialRelationshipTypes.STEPPARENT.OTHER.text=Stepparent
+FamilialRelationshipTypes.STEPSIBLING.MALE.text=Stepbrother
+FamilialRelationshipTypes.STEPSIBLING.FEMALE.text=Stepsister
+FamilialRelationshipTypes.STEPSIBLING.OTHER.text=Stepsibling
+FamilialRelationshipTypes.STEPCHILD.MALE.text=Stepson
+FamilialRelationshipTypes.STEPCHILD.FEMALE.text=Stepdaughter
+FamilialRelationshipTypes.STEPCHILD.OTHER.text=Stepchild
 
 # GenderDescriptors Enum
 GenderDescriptors.MALE.text=male
