--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -48,6 +48,7 @@ FamilialRelationshipType.NIBLING.OTHER.text=Nibling
 FamilialRelationshipType.SPOUSE.MALE.text=Husband
 FamilialRelationshipType.SPOUSE.FEMALE.text=Wife
 FamilialRelationshipType.SPOUSE.OTHER.text=Spouse
+FamilialRelationshipType.PARTNER.text=Partner
 FamilialRelationshipType.PARENT_IN_LAW.MALE.text=Father-in-law
 FamilialRelationshipType.PARENT_IN_LAW.FEMALE.text=Mother-in-law
 FamilialRelationshipType.PARENT_IN_LAW.OTHER.text=Parent-in-law
