Creating FamilialConnectionType enum

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -18,6 +18,15 @@ BodyLocation.LEFT_FOOT.text=Left Foot
 BodyLocation.INTERNAL.text=Innards
 BodyLocation.GENERIC.text=
 
+# FamilialConnectionType Enum
+FamilialConnectionType.MARRIED.text=Married
+FamilialConnectionType.DIVORCED.text=Divorced
+FamilialConnectionType.WIDOWED.text=Widowed
+FamilialConnectionType.PARTNER.text=Partner
+FamilialConnectionType.SINGLE_PARENT.text=Single Parent
+FamilialConnectionType.ADOPTED.text=Adopted
+FamilialConnectionType.UNDEFINED.text=
+
 # FamilialRelationshipType Enum
 FamilialRelationshipType.adopted=Adoptive
 FamilialRelationshipType.great=Great-
