Implementing Finances Reset Options, part 1

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -190,6 +190,8 @@ showPeacetimeCostBox.text=Breakdown peacetime costs to core costs.
 showPeacetimeCostBox.toolTipText=Displays a breakdown of peacetime costs in the daily log.
 yearlyFinancesToCSVExportBox.text=Yearly Finance Table CSV Export
 yearlyFinancesToCSVExportBox.toolTipText=This writes the finances table to a CSV file on the first day of the year, right before the table is carried over to the next year.
+financesResetDuration.text=Finance Table Reset Duration
+financesResetDuration.toolTipText=This changes the duration of resets for the finances table. Any settings longer than biannually are not recommended.
 sellUnitsBox.text=Allow selling of units
 sellUnitsBox.toolTipText=Units can be sold for C-bills
 sellPartsBox.text=Allow selling of parts
