--- a/MekHQ/resources/mekhq/resources/Finances.properties
+++ b/MekHQ/resources/mekhq/resources/Finances.properties
@@ -1,4 +1,4 @@
-# General Finances
+## General Finances
 Carryover.text="Carryover from previous year"
 MonthlyContractPayment.text="Monthly payment for %s"
 ContractPaymentCredit.text="Your account has been credited for %s for the monthly payout from contract %s"
@@ -7,6 +7,34 @@ DistributedShares.text="%s have been distributed as shares."
 NotImplemented.text="<font color='red'><b>You cannot afford to pay %s!</b></font> Lucky for you that personnel morale is not yet implemented."
 AssetPayment.text="Your account has been credited for %s from %s "
 
+## Finances Enums
+# Finances Reset Duration
+FinancesResetDuration.DAILY.text=Daily
+FinancesResetDuration.DAILY.toolTipText=Reset on new day
+FinancesResetDuration.WEEKLY.text=Weekly
+FinancesResetDuration.WEEKLY.toolTipText=Reset every week
+FinancesResetDuration.MONTHLY.text=Monthly
+FinancesResetDuration.MONTHLY.toolTipText=Reset every month
+FinancesResetDuration.SEMIANNUALLY.text=Semiannually
+FinancesResetDuration.SEMIANNUALLY.toolTipText=Reset every six months
+FinancesResetDuration.ANNUALLY.text=Annually
+FinancesResetDuration.ANNUALLY.toolTipText=Reset yearly
+FinancesResetDuration.BIANNUALLY.text=Biannually
+FinancesResetDuration.BIANNUALLY.toolTipText=Reset once every 2 years
+FinancesResetDuration.QUINQUENNIALLY.text=Quinquennially
+FinancesResetDuration.QUINQUENNIALLY.toolTipText=Reset once every 5 years
+FinancesResetDuration.DECENNIALLY.text=Decennially
+FinancesResetDuration.DECENNIALLY.toolTipText=Reset once every 10 years
+FinancesResetDuration.QUADRANSCENTENNIALLY.text=Quadranscentennially
+FinancesResetDuration.QUADRANSCENTENNIALLY.toolTipText=Reset once every 25 years
+FinancesResetDuration.CENTENARY.text=Centenary
+FinancesResetDuration.CENTENARY.toolTipText=Reset once every century
+FinancesResetDuration.SESQUICENTENNIALLY.text=Sesquicentennially
+FinancesResetDuration.SESQUICENTENNIALLY.toolTipText=Reset once every 150 years after the year 2000
+FinancesResetDuration.NEVER.text=Never
+FinancesResetDuration.NEVER.toolTipText=Never reset the Finances table
+
+## Finances Files
 # Peacetime Operating Costs
 PeacetimeCosts.title="Monthly Peacetime Operating Costs"
 PeacetimeCosts.text="Your account has been debited %s for peacetime operating costs"
