Adding support for late spouse prefix, widow, and divorced

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -30,6 +30,7 @@ FamilialConnectionType.UNDEFINED.text=
 # FamilialRelationshipType Enum
 FamilialRelationshipType.adopted=Adoptive
 FamilialRelationshipType.great=Great-
+FamilialRelationshipType.late=Late
 
 FamilialRelationshipType.GRANDPARENT.MALE.text=Grandfather
 FamilialRelationshipType.GRANDPARENT.FEMALE.text=Grandmother
@@ -58,6 +59,8 @@ FamilialRelationshipType.SPOUSE.MALE.text=Husband
 FamilialRelationshipType.SPOUSE.FEMALE.text=Wife
 FamilialRelationshipType.SPOUSE.OTHER.text=Spouse
 FamilialRelationshipType.PARTNER.text=Partner
+FamilialRelationshipType.DIVORCE.text=Divorced
+FamilialRelationshipType.WIDOW.text=Widow
 FamilialRelationshipType.PARENT_IN_LAW.MALE.text=Father-in-law
 FamilialRelationshipType.PARENT_IN_LAW.FEMALE.text=Mother-in-law
 FamilialRelationshipType.PARENT_IN_LAW.OTHER.text=Parent-in-law
